bringToFront: support item view items

instead of blatantly assuming that every TranslatableEntry is a widget,
actually check the entry type and use the parent item view (instead of
crashing) if it's an item.

Task-number: QTBUG-50068
Change-Id: I781d00226894f074e2a3eb0bd0db84e7a28231b0
Reviewed-by: Frederic Marchal <frederic.marchal@wowtechnology.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>